syntax = "proto3";

package opendut.model.cluster;

import "opendut/model/util/uuid.proto";
import "opendut/model/util/net.proto";
import "opendut/model/peer/peer.proto";
import "opendut/model/topology/device.proto";

message ClusterId {
  opendut.model.util.Uuid uuid = 1;
}

message ClusterName {
  string value = 1;
}

// ANCHOR: ClusterDescriptor
message ClusterDescriptor {
  ClusterId id = 1;
  ClusterName name = 2;
  opendut.model.peer.PeerId leader = 3;
  repeated opendut.model.topology.DeviceId devices = 4;
}
// ANCHOR_END: ClusterDescriptor

message ClusterDeployment {
  ClusterId id = 1;
}

// ANCHOR: ClusterAssignment
message ClusterAssignment {
  ClusterId id = 1;
  opendut.model.peer.PeerId leader = 3;
  repeated PeerClusterAssignment assignments = 4;
}
// ANCHOR_END: ClusterAssignment

// ANCHOR: PeerClusterAssignment
message PeerClusterAssignment {
  opendut.model.peer.PeerId peer_id = 1;
  opendut.model.util.IpAddress vpn_address = 2;
  opendut.model.util.Port can_server_port = 3;
}
// ANCHOR_END: PeerClusterAssignment

message ClusterState {
  oneof inner {
    ClusterStateUndeployed undeployed = 1;
    ClusterStateDeploying deploying = 2;
    ClusterStateDeployed deployed = 3;
  }
}

message ClusterStateUndeployed {}

message ClusterStateDeploying {}

message ClusterStateDeployed {
  oneof inner {
    ClusterStateDeployedUnhealthy unhealthy = 1;
    ClusterStateDeployedHealthy healthy = 2;
  }
}

message ClusterStateDeployedUnhealthy {}

message ClusterStateDeployedHealthy {}
